# google-okf-tutorial

./: .gitignore  DATASET.md  DATA_LICENSE.md  HANDBOOK.md  LICENSE  OKF_vs_RAG_Comparison.md  README.md  agentic_rag_chromadb.ipynb  google_okf_zero_to_mastery.ipynb  pyproject.toml
.github/scripts/: ci_check.py
.github/workflows/: ci.yml
eval/: eval_set_v1.yaml
reports/: paired_eval_report.md
scripts/: e2e.sh  paired_eval.py  smoke.sh
