[project]
name = "google-okf-tutorial"
version = "0.1.0"
description = "Zero-to-mastery OKF (Open Knowledge Format) tutorial: local LLM enrichment agent + RAG discovery agent over a real e-commerce dataset"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "tqdm>=4.68.3",
]
